[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raaqa"
dynamic = ["version"]
description = "Read Alignment-based Assembly Quality Assessment"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pysam>=0.22.0",
    "matplotlib>=3.8",
    "pandas>=2.0",
    "numpy>=1.26",
]

[project.scripts]
mapq_softclip = "raaqa.mapq_softclip:main"
visualise = "raaqa.visualise:main"
hese = "raaqa.hese:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["raaqa*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
